--- a/yuval_sror_app/public/stylesheets/CV.css
+++ b/yuval_sror_app/public/stylesheets/CV.css
@@ -6,7 +6,7 @@
   }
   
   body {
-    background-image: url("backrounbd2.jpeg");
+    background-image: url("../images/backrounbd2.jpeg");
     background-color: #cccccc;
    
    }
