--- a/yuval_sror_app/views/CV.html
+++ b/yuval_sror_app/views/CV.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <script src="./javascripts/CV.js"></script>
+      <script src="/javascripts/CV.js"></script>
         <title >
            Yuval Sror CV
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0,">
-        <link rel="stylesheet" href="./stylesheets/CV.css">
+        <link rel="stylesheet" href="/stylesheets/CV.css">
 
     </head>
 
